--- a/templates/base.html
+++ b/templates/base.html
@@ -30,9 +30,9 @@
     </div>
     <!-- Logo image and carousel end -->
     <!-- Menu start -->
-    <ul class="nav nav-pills nav-main" id="nav-main">
+    <div class="nav-main" id="nav-main">
     {% include 'includes/nav.html' %}
-    </ul>
+    </div>
     <!-- Menu end -->
     {% include 'includes/shown_notice.html' %}
     <!-- Content start -->
