Update to mini_fiction 0.0.3

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     {% include 'includes/nav.html' %}
     </div>
     <!-- Menu end -->
-    {% include 'includes/shown_notice.html' %}
+    {% include 'includes/shown_newsitem.html' %}
     <!-- Content start -->
     <div id="content">
 
@@ -42,7 +42,7 @@
 
     </div>
     <!-- Content end -->
-    {{ html_block('footer') }}
+    <footer class="footer">{{ html_block('footer') }}</footer>
     </div>
     <!-- Container end -->
 
