--- a/localstatic/css/ponymain.css
+++ b/localstatic/css/ponymain.css
@@ -165,7 +165,7 @@ body {
 }
 
 
-@media (min-width: 1200px) {
+@media (min-width: 980px) {
     /* like everypony.ru */
     .page-header, .footer {
         margin: 0px -26px;
@@ -174,6 +174,13 @@ body {
 
     .nav-main {
         background-position: -6px -80px;
+    }
+}
+
+
+@media (max-width: 979px) {
+    #comment-add-link + .comment-form {
+        background: transparent none;
     }
 }
 
