--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
         {%- endblock fulltitle -%}
     </title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
 {% include 'base_head.html' %}
     <link rel="stylesheet" href="{{ url_for('localstatic', filename='css/ponymain.css') }}" />
 {% block extrahead %}{% endblock %}
