--- a/src/index.css
+++ b/src/index.css
@@ -158,7 +158,7 @@ body {
 }
 
 .contact-links .contact-forum a {
-    background-image: url(./icons/forum.png);
+    background-image: url(./fav/favicon.png);
 }
 
 .contact-links .contact-vk a {
