--- a/src/index.css
+++ b/src/index.css
@@ -1,171 +1,9 @@
-@import "./css/tags.css";
+@import "./css/avatars.css";
+@import "./css/backgrounds.css";
+@import "./css/contact_links.css";
+@import "./css/legacy.css";
+@import "./css/misc.css";
 @import "./css/special_pages.css";
-
-body {
-    background: #c5ccfe url(./icons/body-bg.png) repeat 0 0;
-}
-
-.page-header {
-    background-image: url(./icons/bg.jpg);
-}
-
-.nav-main {
-    background-image: url(./icons/bg.jpg);
-    background-position: 0 -80px;
-}
-
-.footer {
-    background-image: url(./icons/bg.jpg);
-}
-
-
-/**
- * RSS + Twitter icons
-*/
-.rss {
-    background-image: url(./icons/rss.png);
-}
-
-.rss:hover {
-    background-position: 0 -32px;
-}
-
-.rss {
-    float: right;
-    width: 32px;
-    height: 32px;
-    margin: 6px 0 0 12px;
-}
-
-
-/* Пони-аватарки */
-
-.user-avatar-placeholder {
-    background-image: url(./icons/userpic.jpg);
-}
-
-
-/* Пони-иконка загрузки */
-
-.loader {
-    background-image: url(./icons/loading.gif);
-}
-
-
-/* Красивые картинки, маскоты, графика, истерэги */
-
-#comment-add-link + .comment-form { /* only for non-answer comment form */
-    background: transparent url(./pageart/comments.png) no-repeat 90% 100%;
-    min-height: 250px;
-}
-
-/* Голосования-подковки */
-
-.comment-vote-area .vote-up {
-    background: url(./icons/upvote.png) center center no-repeat;
-}
-
-.comment-vote-area .vote-down {
-    background: url(./icons/downvote.png) center center no-repeat;
-}
-
-
-/* Контакты автора */
-.contact-links a {
-    line-height: 16px;
-    height: 16px;
-    padding: 0 0 0 22px;
-    background-color: transparent;
-    background-repeat: no-repeat;
-    background-position: 0 0;
-}
-
-.contact-links .contact-xmpp a {
-    background-image: url(./icons/jabber.png);
-}
-
-.contact-links .contact-skype a {
-    background-image: url(./icons/skype.png);
-}
-
-.contact-links .contact-telegram a {
-    background-image: url(./icons/telegram.png);
-}
-
-.contact-links .contact-tabun a {
-    background-image: url(./icons/tabun.png);
-}
-
-.contact-links .contact-forum a {
-    background-image: url(./fav/favicon.png);
-}
-
-.contact-links .contact-vk a {
-    background-image: url(./icons/vk.png);
-}
-
-
-/* Больное наследие Еврипони */
-
-.servicelinks {
-    display: block;
-    text-align: right;
-    list-style-type: none;
-}
-
-.servicelinks a {
-    font-size: 10px;
-    color: #E6E9F2;
-    text-decoration: none;
-    font-family: Verdana, Arial, sans-serif;
-}
-
-.main-menu {
-    padding-top: 4px;
-}
-
-
-@media (min-width: 980px) {
-    /* like everypony.ru */
-    .page-header, .footer {
-        margin: 0 -26px;
-        width: auto;
-    }
-
-    .nav-main {
-        background-position: -6px -80px;
-    }
-}
-
-
-@media (max-width: 979px) {
-    #comment-add-link + .comment-form {
-        background: transparent none;
-    }
-}
-
-
-@media (max-width: 640px) {
-    .nav-main-links {
-        background-color: #1D2A4F;
-    }
-}
-
-
-/* Smartphones */
-@media ( max-width: 480px) {
-    .servicelinks {
-        display: none;
-    }
-
-    .rss {
-        margin: 0 0 0 6px;
-    }
-}
-
-/* 320 px screens */
-@media ( max-width: 320px) {
-    .rss {
-        display: none;
-    }
-}
+@import "./css/tags.css";
+@import "./css/votes.css";
+@import "./css/_variables.css";
