Align upvote color

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -2,7 +2,7 @@
     --background-color: #b9c1fd;
     --background-color-dark-blend: #34487f;
 
-    --upvote-color: #2da449;
+    --upvote-color: #7bb32d;
     --downvote-color: #a4392d;
 
     --xmpp-contact-color: #C61010;
