--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,4 @@
 @import "./css/special_pages.css";
 @import "./css/tags.css";
 @import "./css/votes.css";
-@import "./css/_variables.css";
+@import "css/variables.css";
