Align colors with main repo

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -2,8 +2,8 @@
     --background-color: #b9c1fd;
     --background-color-dark-blend: #34487f;
 
-    --upvote-color: #7bb32d;
-    --downvote-color: #a4392d;
+    --upvote-color: #729D34;
+    --downvote-color: #DC6F65;
 
     --xmpp-contact-color: #C61010;
     --skype-contact-color: #00AAEF;
