--- a/src/css/backgrounds.css
+++ b/src/css/backgrounds.css
@@ -9,10 +9,21 @@ body {
 .page-header,
 .nav-main,
 .footer {
-    background-image: url(../assets/background-head.png);
     background-color: var(--background-color-dark-blend);
     background-size: cover;
     background-blend-mode: multiply;
+    background-image: url(../assets/background-head-1x.png);
+    background-image: -webkit-image-set(
+            url(../assets/background-head-1x.webp) 1x,
+            url(../assets/background-head-1.5x.webp) 1.5x,
+            url(../assets/background-head-2x.webp) 2x
+    );
+    background-image: image-set(
+            url(../assets/background-head-1x.webp) 1x type("image/webp"),
+            url(../assets/background-head-1.5x.webp) 1.5x type("image/webp"),
+            url(../assets/background-head-2x.webp) 2x type("image/webp")
+    );
+
 }
 
 
