--- a/src/css/backgrounds.css
+++ b/src/css/backgrounds.css
@@ -4,7 +4,7 @@ body {
     background-color: var(--background-color);
     background-blend-mode: luminosity;
     background-image: url(../assets/background.svg);
-    background-size: 6%;
+    background-size: 10rem;
 }
 
 .page-header,
