--- a/src/css/backgrounds.css
+++ b/src/css/backgrounds.css
@@ -10,21 +10,20 @@ body {
 .page-header,
 .nav-main,
 .footer {
-    background-color: var(--background-color-dark-blend);
     background-size: 100% auto;
-    background-blend-mode: multiply;
-    background-image: url(../assets/background-head-1x.png);
-    background-image: -webkit-image-set(
-            url(../assets/background-head-1x.webp) 1x,
-            url(../assets/background-head-1.5x.webp) 1.5x,
-            url(../assets/background-head-2x.webp) 2x
-    );
+    background-image: url(../assets/background-head-1x.jpg);
     background-image: image-set(
             url(../assets/background-head-1x.webp) 1x type("image/webp"),
             url(../assets/background-head-1.5x.webp) 1.5x type("image/webp"),
             url(../assets/background-head-2x.webp) 2x type("image/webp")
     );
 
+    @media (max-width: 480px) {
+        background-image: image-set(
+            url(../assets/background-head-1x.webp) type("image/webp"),
+            url(../assets/background-head-1x.jpg) type("image/jpeg")
+        );
+    }
 }
 
 .nav-main {
