Optimize background.svg and remove background-blend-mode for better performance

--- a/src/css/backgrounds.css
+++ b/src/css/backgrounds.css
@@ -1,10 +1,11 @@
 body {
-    background-repeat: repeat;
-    background-position: 0 0;
     background-color: var(--background-color);
-    background-blend-mode: luminosity;
     background-image: url(../assets/background.svg);
-    background-size: 10rem;
+    background-size: 159px 171px;
+
+    @media (max-width: 767px) {
+        background-image: none;
+    }
 }
 
 .page-header,
